--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ src: url('VarelaRound-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-I
 .loader {
     position: fixed;
     z-index: 9999;
-    background: url('/img/loader.gif') 50% 50% no-repeat;
+    background: url(../img/loader.gif)50% 50% no-repeat;
     top: 0px;
     left: 0px;
     height: 100%;
@@ -360,6 +360,10 @@ a.navbar-brand {
     width: 80%;
 }
 
+.resp {
+    display: none;
+}
+
 .slide-right p {
     width: 60%;
     text-align: justify;
@@ -494,15 +498,6 @@ a.navbar-brand {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-#portfolio ul {
-    margin-bottom: 10%;
-}
-
-#color-bg {
-    position: absolute;
-    width: 100%;
-    opacity: .7;
-}
 
 #portfolio>h2 {
     font: normal 5em 'Lato';
@@ -525,7 +520,7 @@ a.navbar-brand {
     max-width: 1366px;
     margin: 0 auto;
     list-style: none;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 .grid li {
@@ -610,6 +605,32 @@ a.navbar-brand {
     bottom: 20px;
     right: 20px;
 }
+
+.lb {
+	display: none;
+	position: fixed!important;
+	z-index: 100000;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+  text-align:center;
+}
+
+.lb img {
+	max-width: 90%;
+	max-height: 80%;
+	margin-top: 2%;
+}
+
+.lb:target {
+	outline: none;
+	display: block;
+}
+
+.lb:hover {cursor:default;}
+img:hover {cursor:pointer;}
 /*--------------------Diamonds----------------------*/
 
 .diamonds {
@@ -800,49 +821,99 @@ a.navbar-brand {
             margin: -15em -7em -5em;
         }
     }
-    /*=================contact====================*/
-    /* Footer */
-    footer {
-        color: #ffffff;
-        padding: 10px 0;
-    }
-    .cp-right P {
-        margin: 0;
-        padding: 10px 0;
-    }
-    .cp-right P a {
-        text-decoration: none;
-    }
-    .cp-right P a:hover {
-        color: #fff;
-    }
-    .top-scroll {
-        margin: 0;
-        padding: 0;
-    }
-    .top-scroll a {
-        text-decoration: none;
-        color: inherit;
-        display: block;
-        font-size: 92px;
-        line-height: 48px;
-    }
-    .top-scroll a:hover {
-        color: #fff;
-    }
-    i.scroll {
-        color: #fff;
-        position: absolute;
-        top: -15px;
-        left: 50%;
-        margin-left: -28px;
-    }
-    i.scroll:hover {
-        color: #fff;
-    }
+    /*=================contact===================*/
+    
+.main-contact{
+ padding: 40px 0;
+}
+
+#contact .fa {
+    
+}
+    
+.contact-info p span{
+width:20x;
+height:24px;
+text-align:center;
+}
+.contact-info .fa{
+font-size:18px;
+vertical-align:middle;
+margin-right:20px;
+}
+
+.contact p{
+font-size:18px;
+margin:0;
+padding:0 0 0 0;
+}
+    
+.contact span{
+border-radius: 100%;
+-webkit-border-radius: 100%;
+-moz-border-radius: 100%;
+-ms-border-radius: 100%;
+-o-border-radius: 100%;
+border: 4px solid #7a7a7a;
+width: 60px;
+height: 60px;
+text-align: center;
+font-size: 36px;
+line-height: 53px;
+margin-bottom:20px;
+}
+.contact p a{
+color:#7a7a7a;
+}
+.contact p a:hover{
+text-decoration:none;
+}
+/* Footer */
+
+footer {
+color: #ffffff;
+padding:10px 0;
+}
+.cp-right P{
+margin:0;
+padding:10px 0;
+}
+.cp-right P a{
+ text-decoration:none;
+}
+.cp-right P a:hover{
+color:#fff;
+}
+.top-scroll {
+  margin: 0;
+  padding:0;
+}
+
+.top-scroll a {
+  text-decoration: none;
+  color: inherit;
+  display:block;
+  font-size:92px;
+  line-height:48px;
+}
+.top-scroll a:hover{
+color:#fff;
+}
+i.scroll {
+color: #fff;
+position: absolute;
+top: -15px;
+left:50%;
+margin-left: -28px;
+}
+
+i.scroll:hover {
+color:#fff;
+}
+    
     /* ========================================== Footer ======================================================= */
     .list-inline {
-        text-align: right;
+        text-align: center;
         margin: 0;
     }
     .list-inline > li {
@@ -905,6 +976,27 @@ a.navbar-brand {
         .about-content p {
             text-align: left;
         }
+        .slide-right {
+    display: none;
+    }
+    
+    .resp p{
+        display: block;
+    width: 60%;
+    text-align: justify;
+    float: left;
+    position: relative;
+    margin-top: -500px;
+    margin-left: 50px;
+    font-weight: 550;
+    font-size: 12pt;
+    }
+    
+    .resp p span {
+        color: darkred;
+    font-weight: bold;
+    font-size: 12pt;
+    }
     }
     @media screen and (min-width:768px) and (max-width: 991px) {
         .link-attr a {
